[gd_scene load_steps=4 format=3 uid="uid://c3ogx1gfn80d5"]

[ext_resource type="Script" uid="uid://bry1835og83y3" path="res://scripts/ui/combat/opponent_entry.gd" id="1_fe8n3"]
[ext_resource type="Texture2D" uid="uid://boqnqrsfg2uad" path="res://assets/icons/status_icon.png" id="2_hgpj8"]
[ext_resource type="Texture2D" uid="uid://be7kniy1f2gue" path="res://assets/icons/target_icon.png" id="3_4158p"]

[node name="Opponent Entry" type="HBoxContainer"]
script = ExtResource("1_fe8n3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 2

[node name="HealthPercent" type="Label" parent="."]
layout_mode = 2

[node name="StatusIcon" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_hgpj8")

[node name="TargetButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_4158p")
